[package]
name = "aoc-2024"
authors = ["Anthony Van Herrewege"]
version = "0.1.0"
edition = "2021"

[dependencies]
bit-vec = "0.8"
criterion = "0.5"
env_logger = "0.11"
itertools = "0.13"
log = "0.4"
nalgebra = "0.33"
radix-heap = "0.4"
rayon = "1"
regex = "1"
rustc-hash = "2.1"
strum = "0.26"
strum_macros = "0.26"
util = { path = "util" }
yada = "0.5"

[workspace]
resolver = "2"
members = ["util"]

[profile.bench]
# Maximum runtime performance.
codegen-units = 1
lto = "fat"
#panic = "abort" # Create warnings.

[profile.flamegraph]
# Release with debug info.
inherits = "release"
debug = true

[[bench]]
name = "day_01"
harness = false

[[bench]]
name = "day_02"
harness = false

[[bench]]
name = "day_03"
harness = false

[[bench]]
name = "day_04"
harness = false

[[bench]]
name = "day_05"
harness = false

[[bench]]
name = "day_06"
harness = false

[[bench]]
name = "day_07"
harness = false

[[bench]]
name = "day_08"
harness = false

[[bench]]
name = "day_09"
harness = false

[[bench]]
name = "day_10"
harness = false

[[bench]]
name = "day_11"
harness = false

[[bench]]
name = "day_12"
harness = false

[[bench]]
name = "day_13"
harness = false

[[bench]]
name = "day_14"
harness = false

[[bench]]
name = "day_15"
harness = false

[[bench]]
name = "day_16"
harness = false

[[bench]]
name = "day_17"
harness = false

[[bench]]
name = "day_19"
harness = false
