[package]
name = "aoc-2024"
authors = ["Anthony Van Herrewege"]
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.5"
itertools = "0.13"
nalgebra = "0.33"
regex = "1"
strum = "0.26"
strum_macros = "0.26"
util = { path = "util" }

[workspace]
resolver = "2"
members = ["util"]

[profile.bench]
# Release with debug info.
inherits = "release"
debug = true

[[bench]]
name = "day_01"
harness = false

[[bench]]
name = "day_02"
harness = false

[[bench]]
name = "day_03"
harness = false

