[package]
name = "aoc-2024"
authors = ["Anthony Van Herrewege"]
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7"
atoi_simd = "=0.16"
bit-vec = "0.8"
comfy-table = "7.1"
criterion = "0.5"
env_logger = "0.11"
heck = "0.5"
itertools = "0.13"
log = "0.4"
nalgebra = "0.33"
paste = "1.0"
permutohedron = "0.2"
radix-heap = "0.4"
rayon = "1"
rayon-cond = "0.3"
regex = "1"
rustc-hash = "2.1"
smallvec = "1.13"
strum = "0.26"
strum_macros = "0.26"
util = { path = "util" }
yada = "0.5"

[workspace]
resolver = "2"
members = ["util"]

[profile.release]
panic = "abort"

[profile.bench]
# Maximum runtime performance.
codegen-units = 1
lto = "fat"
panic = "abort"   # Gets ignored by Cargo...

[profile.flamegraph]
# Release with debug info.
inherits = "release"
debug = true

[[bench]]
name = "day_01"
harness = false

[[bench]]
name = "day_02"
harness = false

[[bench]]
name = "day_03"
harness = false

[[bench]]
name = "day_04"
harness = false

[[bench]]
name = "day_05"
harness = false

[[bench]]
name = "day_06"
harness = false

[[bench]]
name = "day_07"
harness = false

[[bench]]
name = "day_08"
harness = false

[[bench]]
name = "day_09"
harness = false

[[bench]]
name = "day_10"
harness = false

[[bench]]
name = "day_11"
harness = false

[[bench]]
name = "day_12"
harness = false

[[bench]]
name = "day_13"
harness = false

[[bench]]
name = "day_14"
harness = false

[[bench]]
name = "day_15"
harness = false

[[bench]]
name = "day_16"
harness = false

[[bench]]
name = "day_17"
harness = false

[[bench]]
name = "day_18"
harness = false

[[bench]]
name = "day_19"
harness = false

[[bench]]
name = "day_20"
harness = false

[[bench]]
name = "day_21"
harness = false

[[bench]]
name = "day_22"
harness = false

[[bench]]
name = "day_23"
harness = false

[[bench]]
name = "day_24"
harness = false

[[bench]]
name = "day_25"
harness = false
